Scaffold Phase 0: sbt + pnpm skeletons, mise toolchain, CI
- server: Scala 3.3.7 module on JDK 25, full M0 dependency graph pinned in
  project/Dependencies.scala (http4s, tapir, skunk, flyway, circe, ciris,
  jwt-scala, log4cats, testcontainers); trivial Main + SmokeSuite green.
- sdk: pnpm 11 workspace - @firemoot/core, @firemoot/client, @firemoot/test
  placeholders (TS 6, NodeNext, Vitest); typecheck/test/build green.
- mise.toml pins JDK 25 / sbt 1.12.11 / node 22 / pnpm 11 as the single
  toolchain source for both local and CI.
- CI (GitHub Actions) runs scala + sdk jobs via jdx/mise-action with Coursier
  and pnpm-store caching.
- scalafmt fileOverride keeps the sbt meta-build on the scala213source3 dialect.
- Docs: PLAN/SPEC updated for JDK 25 (compact object headers), mise, exact pins;
  Phase 0 ticked. Project CLAUDE.md added.